# GodotRustSimpleExample

./: .gitignore  README.md
godot/: hello_world.gdextension  icon.svg.import  main.tscn  new_rust_ref_counted.tres  new_rust_resource.tres  new_script.gd  project.godot
rust/: Cargo.toml
rust/src/: lib.rs
